Fix contrast ratio of hovered footer links
Fixes #166.

--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -24,3 +24,4 @@ $toc-highlight-text-color: hsl(10, 40%, 20%);
 /* Footer body color */
 $footer-color: $primary-color;
 $footer-text-color: hsl(145, 10%, 90%);
+$footer-hover-color: $link-color;
